# TensorShield

./: LICENSE  README.md  requirements.txt
Hikey960/: Android.mk  CMakeLists.txt  README.md  ta.template.md  test.md
Hikey960/host/: main.c
Hikey960/host/examples/: classifier.c  darknet.c  detector.c  go.c  instance-segmenter.c  nightmare.c  regressor.c  segmenter.c
Hikey960/host/include/: darknet.h  main.h
Hikey960/host/src/: activation_kernels.c  activation_layer.c  avgpool_layer.c  avgpool_layer_kernels.c  batchnorm_layer.c  blas.h  col2im_kernels.c  convolutional_layer.c  convolutional_layer.h  cost_layer.c  data.c  deconvolutional_layer.c  dropout_layer_kernels.c  gemm.c  gemm.h  gru_layer.c  image.c  iseg_layer.c  l2norm_layer.c  layer.c  network.c  opencl.c  opencl.h  parser.c  parser.h  reorg_layer.c  shortcut_layer.c  softmax_layer.c  utils.c  utils.h
Hikey960/ta/: Makefile  avgpool_layer_TA.c  blas_TA.c  connected_layer_TA.c  convolutional_layer_TA.c  darknetp_ta.c  dropout_layer_TA.c  experiment_network_TA.c  im2col_TA.c  math_TA.c  network_TA.c  parser_TA.c  user_ta_header_defines.h
Hikey960/ta/include/: activations_TA.h  connected_layer_TA.h  darknet_TA.h  gemm_TA.h  network_TA.h  parser_TA.h
RPI3B/: 7fc5c039-0542-4ee1-80af-b4eab2f1998d.ta  CMakeLists.txt  Makefile  cmake_install.cmake  test.md
RPI3B/host/: main.c
RPI3B/host/examples/: cifar.c  classifier.c  darknet.c  lsd.c  rnn.c
RPI3B/host/include/: darknet.h  main.h
RPI3B/host/src/: activation_layer.c  activations.h  batchnorm_layer.c  blas_kernels.c  col2im.h  col2im_kernels.c  connected_layer.c  convolutional_kernels.c  convolutional_layer.c  crnn_layer.c  crop_layer.c  crop_layer_kernels.c  deconvolutional_kernels.c  detection_layer.c  dropout_layer.c  im2col.h  im2col_kernels.c  logistic_layer.c  lstm_layer.c  maxpool_layer.c  maxpool_layer_kernels.c  network.c  normalization_layer.c  opencl.c  opencl.h  parser.c  parser.h  region_layer.c  (+4 more)
RPI3B/ta/: activation_layer_TA.c  activations_TA.c  batchnorm_layer_TA.c  convolutional_layer_TA.c  darknetp_ta.c  experiment_network_TA.c  gemm_TA.c  im2col_TA.c  maxpool_layer_TA.c  network_TA.c  normalization_layer_TA.c  shortcut_layer_TA.c  softmax_layer_TA.c  user_ta_header_defines.h
membership-inference/membership-inference/: knockoff_train.py  mem_attack.py  rm_subdir_meminf.py  train_layer.py  transfer.py
model-stealing/: get_params_protected_ratio.py  j_process.py  j_runmia.py  my_gradcam_save.ipynb
model-stealing/mia/: attack_model.py  mode0_attack.py  util.py
(+2686 files in other folders)
